colcon_ws/log/build_2022-04-02_22-04-57/auto_nav/stderr.log
  File "/home/prince/colcon_ws/install/auto_nav/lib/python3.8/site-packages/auto_nav/r2_wall_follow.py", line 542
    global is_loaded = True
                     ^
SyntaxError: invalid syntax

